# srst-uttale

./: AGENTS.md  README.md  STYLE.md  pyproject.toml  quick_ui.py  server.py
docs/specs/: 2026-06-28-incremental-reindex-design.md  2026-06-29-generate-topics-logging-design.md  2026-06-29-search-exact-match-design.md
docs/superpowers/plans/: 2026-06-28-query-driven-reindex.md  2026-06-29-generate-topics-logging.md  2026-06-29-search-exact-match.md
uttale/: app.py  quick_ui.py  server.py
uttale/backend/: server.py  test_server.py
uttale/mobile/: app.py  mobile.py
uttale/mobile/static/: app.js
uttale/mobile/templates/: index.html
uttale/quick_ui_qt/: quick_ui_qt.py
uttale/static/: app.js
uttale/templates/: index.html
