[project]
name = "uttale"
version = "0.1.0"
description = "Audio extraction and subtitle search tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "webvtt-py>=0.5.1",
    "pydub>=0.25.1",
    "tqdm>=4.66.5",
    "duckdb>=1.1.0",
    "pandas>=2.2.3",
    "polars>=1.7.1",
    "pyarrow>=17.0.0",
    "xapian-bindings>=0.1.0",
    "pyqt6>=6.8.0",
    "pydantic>=2.10.6",
]

[project.scripts]
uttale = "uttale.quick_ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"